@@ -18,6 +18,19 @@ Here is a **complete Java version timeline with major features** (from first rel
 * AWT (Abstract Window Toolkit)
 * Basic OOP support
 
+**Code Example:**
+```java
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, World!");
+    }
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What were the key features of Java 1.0?"
+**Your Response:** "Java 1.0 was revolutionary because it introduced the 'Write Once, Run Anywhere' philosophy through the JVM. This meant developers could write code once and run it on any platform without modification. It included Applets for web embedding, AWT for GUI development, and fundamental OOP support that made Java accessible to C++ developers looking for a safer alternative."
+
 ---
 
 ## 🔹 2️⃣ Java 1.1 (1997)
@@ -28,6 +41,29 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Reflection API
 * JavaBeans
 
+**Code Example:**
+```java
+// Inner Class
+public class Outer {
+    private int x = 10;
+    
+    class Inner {
+        void display() {
+            System.out.println("Inner class access: " + x);
+        }
+    }
+}
+
+// JDBC Example
+Connection conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/mydb", "user", "password");
+Statement stmt = conn.createStatement();
+ResultSet rs = stmt.executeQuery("SELECT * FROM users");
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What significant features came in Java 1.1?"
+**Your Response:** "Java 1.1 was a major step forward that introduced Inner Classes, allowing for better encapsulation and callback implementations. JDBC was groundbreaking - it provided a standard way to connect to databases, making Java enterprise-ready. RMI enabled distributed computing, Reflection API allowed runtime introspection, and JavaBeans introduced a component model that influenced many frameworks later."
+
 ---
 
 ## 🔹 3️⃣ Java 1.2 (1998) – *Java 2*
@@ -37,6 +73,24 @@ Here is a **complete Java version timeline with major features** (from first rel
 * JIT Compiler
 * Security model improvements
 
+**Code Example:**
+```java
+// Collections Framework
+List<String> list = new ArrayList<>();
+list.add("Java");
+list.add("Collections");
+
+// Swing Example
+JFrame frame = new JFrame("My App");
+JButton button = new JButton("Click Me");
+frame.add(button);
+frame.setSize(300, 200);
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What made Java 1.2 special?"
+**Your Response:** "Java 1.2, renamed as Java 2, was massive. It gave us the Swing framework for rich GUIs, the Collections Framework that we still use today - List, Set, Map implementations that standardized data structures. The JIT Compiler dramatically improved performance by compiling bytecode to native code, and enhanced security made it suitable for enterprise applications."
+
 ---
 
 ## 🔹 4️⃣ Java 1.3 (2000)
@@ -44,6 +98,25 @@ Here is a **complete Java version timeline with major features** (from first rel
 * HotSpot JVM
 * Java Sound API
 * JNDI included by default
+
+**Code Example:**
+```java
+// HotSpot JVM optimization happens automatically
+
+// Java Sound API
+Clip clip = AudioSystem.getClip();
+AudioInputStream inputStream = AudioSystem.getAudioInputStream(new File("sound.wav"));
+clip.open(inputStream);
+clip.start();
+
+// JNDI Lookup
+Context ctx = new InitialContext();
+DataSource ds = (DataSource) ctx.lookup("java:comp/env/jdbc/MyDB");
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 1.3 bring to the table?"
+**Your Response:** "Java 1.3 introduced the HotSpot JVM, which was a game-changer for performance through advanced garbage collection and optimization. The Java Sound API enabled multimedia applications, and JNDI became standard, allowing Java applications to access directory services like LDAP - crucial for enterprise environments."
 
 ---
 
@@ -54,6 +127,30 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Logging API
 * XML support
 * Exception chaining
+
+**Code Example:**
+```java
+// Assert keyword
+public void process(int value) {
+    assert value > 0 : "Value must be positive";
+    System.out.println("Processing: " + value);
+}
+
+// NIO Example
+Path path = Paths.get("file.txt");
+List<String> lines = Files.readAllLines(path);
+
+// Exception Chaining
+try {
+    // risky operation
+} catch (IOException e) {
+    throw new RuntimeException("Failed to process", e);
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What were the key additions in Java 1.4?"
+**Your Response:** "Java 1.4 focused on robustness and developer productivity. The assert keyword gave us proper assertions for testing. NIO was revolutionary for high-performance I/O operations with channels and buffers. The Logging API provided standardized logging, XML support made it enterprise-ready, and exception chaining helped with better error debugging."
 
 ---
 
@@ -71,6 +168,48 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Varargs
 * Static Import
 
+**Code Example:**
+```java
+// Generics
+List<String> names = new ArrayList<>();
+Map<String, Integer> ages = new HashMap<>();
+
+// Annotations
+@Override
+public String toString() {
+    return "MyObject";
+}
+
+// Autoboxing
+Integer num = 42; // int to Integer
+int value = num;  // Integer to int
+
+// Enhanced for-loop
+for (String name : names) {
+    System.out.println(name);
+}
+
+// Enums
+enum Day { MONDAY, TUESDAY, WEDNESDAY }
+Day today = Day.MONDAY;
+
+// Varargs
+public void print(String... items) {
+    for (String item : items) {
+        System.out.println(item);
+    }
+}
+print("A", "B", "C");
+
+// Static Import
+import static java.lang.Math.*;
+double result = sqrt(16) + pow(2, 3);
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "Why was Java 5 called a 'Massive Upgrade'?"
+**Your Response:** "Java 5 transformed the language! Generics brought type safety, eliminating runtime ClassCastException. Annotations revolutionized how we configure frameworks. Autoboxing made primitive-wrapper conversion seamless. Enhanced for-loops simplified iteration. Enums gave us type-safe constants. Varargs simplified method signatures, and Static Import made code more readable. It was the biggest Java release ever!"
+
 ---
 
 ## 🔹 7️⃣ Java 6 (2006)
@@ -80,6 +219,36 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Compiler API
 * Scripting support
 * Web Services support
+
+**Code Example:**
+```java
+// JDBC 4.0 with annotations
+@DataSourceDefinition(
+    name = "java:app/jdbc/MyDataSource",
+    className = "com.mysql.jdbc.jdbc2.optional.MysqlDataSource",
+    portNumber = 3306,
+    serverName = "localhost",
+    user = "user",
+    password = "password"
+)
+
+// Compiler API
+JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+StandardJavaFileManager fileManager = compiler.getStandardFileManager(null, null, null);
+
+// Web Service (JAX-WS)
+@WebService
+public class MyService {
+    @WebMethod
+    public String sayHello(String name) {
+        return "Hello " + name;
+    }
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 6 focus on?"
+**Your Response:** "Java 6 was about maturation and enterprise readiness. Performance improvements made HotSpot even better. JDBC 4.0 simplified database programming with annotations. The Compiler API allowed IDEs to compile code dynamically. Scripting support integrated JavaScript engines, and Web Services support with JAX-WS made Java a first-class citizen for SOA architectures."
 
 ---
 
@@ -92,6 +261,62 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Fork/Join Framework
 * String in switch
 
+**Code Example:**
+```java
+// Try-with-resources
+try (BufferedReader br = new BufferedReader(new FileReader("file.txt"))) {
+    String line;
+    while ((line = br.readLine()) != null) {
+        System.out.println(line);
+    }
+} // Auto-closed
+
+// Multi-catch
+try {
+    // risky operation
+} catch (IOException | SQLException e) {
+    e.printStackTrace();
+}
+
+// Diamond operator
+Map<String, List<Integer>> map = new HashMap<>(); // Type inferred
+
+// NIO.2 Files API
+Path path = Paths.get("data.txt");
+String content = Files.readString(path);
+Files.writeString(Paths.get("output.txt"), "Hello World");
+
+// Fork/Join Framework
+class SumTask extends RecursiveTask<Long> {
+    private final long[] array;
+    private final int start, end;
+    
+    protected Long compute() {
+        if (end - start <= THRESHOLD) {
+            long sum = 0;
+            for (int i = start; i < end; i++) sum += array[i];
+            return sum;
+        }
+        // split and fork
+    }
+}
+
+// String in switch
+String day = "MONDAY";
+switch (day) {
+    case "MONDAY":
+        System.out.println("Start of week");
+        break;
+    case "FRIDAY":
+        System.out.println("End of week");
+        break;
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What productivity features came in Java 7?"
+**Your Response:** "Java 7 was all about developer convenience. Try-with-resources eliminated finally blocks for resource cleanup. Multi-catch reduced code duplication in exception handling. The Diamond operator removed redundant type declarations. NIO.2's Files API made file operations much simpler. Fork/Join Framework enabled parallel processing, and String in switch was a long-awaited feature!"
+
 ---
 
 ## 🔹 9️⃣ Java 8 (2014) – Most Popular
@@ -103,6 +328,56 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Optional class
 * New Date & Time API (java.time)
 * Nashorn JavaScript engine
+
+**Code Example:**
+```java
+// Lambda Expressions
+List<String> names = Arrays.asList("Alice", "Bob", "Charlie");
+Collections.sort(names, (a, b) -> a.compareTo(b));
+
+// Stream API
+List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
+List<Integer> squares = numbers.stream()
+    .filter(n -> n % 2 == 1)
+    .map(n -> n * n)
+    .collect(Collectors.toList());
+
+// Functional Interface
+@FunctionalInterface
+interface Calculator {
+    int calculate(int a, int b);
+}
+
+Calculator add = (a, b) -> a + b;
+int result = add.calculate(5, 3); // 8
+
+// Default methods in interface
+interface Vehicle {
+    void start();
+    
+    default void honk() {
+        System.out.println("Beep beep!");
+    }
+}
+
+// Optional class
+Optional<String> optional = Optional.of("Hello");
+String value = optional.orElse("Default");
+optional.ifPresent(System.out::println);
+
+// New Date/Time API
+LocalDate date = LocalDate.now();
+LocalDateTime dateTime = LocalDateTime.of(2023, Month.JANUARY, 1, 10, 30);
+ZonedDateTime zonedDateTime = ZonedDateTime.now(ZoneId.of("America/New_York"));
+
+// Nashorn JavaScript Engine
+ScriptEngine engine = new ScriptEngineManager().getEngineByName("nashorn");
+engine.eval("print('Hello from JavaScript')");
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "Why is Java 8 considered the most popular version?"
+**Your Response:** "Java 8 revolutionized Java programming! Lambda Expressions introduced functional programming, making code more concise and expressive. Stream API transformed how we process collections with functional operations. Functional Interfaces became the foundation for lambdas. Default methods allowed interface evolution. Optional eliminated null pointer exceptions. The new Date/Time API fixed decades of problems, and Nashorn replaced Rhino for JavaScript integration."
 
 ---
 
@@ -118,6 +393,47 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Stream API enhancements
 * Multi-release JARs
 
+**Code Example:**
+```java
+// Module System (module-info.java)
+module com.myapp {
+    requires java.base;
+    requires java.sql;
+    exports com.myapp.api;
+}
+
+// JShell REPL
+jshell> List<String> list = new ArrayList<>();
+jshell> list.add("Hello");
+jshell> System.out.println(list);
+[Hello]
+
+// Private methods in interfaces
+interface MyInterface {
+    default void method1() {
+        helperMethod();
+    }
+    
+    default void method2() {
+        helperMethod();
+    }
+    
+    private void helperMethod() {
+        System.out.println("Helper");
+    }
+}
+
+// Stream API enhancements
+List<Integer> numbers = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+List<Integer> result = numbers.stream()
+    .takeWhile(n -> n < 6) // [1, 2, 3, 4, 5]
+    .collect(Collectors.toList());
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What was the biggest change in Java 9?"
+**Your Response:** "Java 9's Module System (Project Jigsaw) was the biggest change since Java 5! It solved JAR hell by providing strong encapsulation and reliable configuration. JShell finally gave Java a REPL for interactive development. Private methods in interfaces allowed better code organization. Stream API enhancements like takeWhile/dropWhile made functional programming more powerful, and Multi-release JARs allowed version-specific code."
+
 ---
 
 ## 🔹 1️⃣1️⃣ Java 10 (2018)
@@ -125,6 +441,25 @@ Here is a **complete Java version timeline with major features** (from first rel
 * var (Local variable type inference)
 * Application Class-Data Sharing
 * G1 improvements
+
+**Code Example:**
+```java
+// var keyword - Local Variable Type Inference
+var list = new ArrayList<String>(); // Type inferred as ArrayList<String>
+var map = new HashMap<String, Integer>(); // Type inferred as HashMap<String, Integer>
+var stream = list.stream(); // Type inferred as Stream<String>
+
+for (var item : list) {
+    System.out.println(item);
+}
+
+// Application Class-Data Sharing happens at JVM level
+// No code changes required - JVM optimization
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 10 introduce?"
+**Your Response:** "Java 10 focused on developer productivity with the 'var' keyword for local variable type inference - making code more readable without losing type safety. Application Class-Data Sharing improved startup time and memory usage. G1 garbage collector enhancements reduced pause times, making Java more suitable for latency-sensitive applications."
 
 ---
 
@@ -136,12 +471,74 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Removed Java EE modules
 * TLS 1.3 support
 
+**Code Example:**
+```java
+// HTTP Client (Standard)
+HttpClient client = HttpClient.newHttpClient();
+HttpRequest request = HttpRequest.newBuilder()
+    .uri(URI.create("https://api.example.com/data"))
+    .header("Content-Type", "application/json")
+    .POST(HttpRequest.BodyPublishers.ofString("{\"key\":\"value\"}"))
+    .build();
+
+HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+System.out.println("Response: " + response.body());
+
+// New String methods
+String text = "   Hello World   ";
+boolean blank = text.isBlank(); // false
+String stripped = text.strip(); // "Hello World"
+Stream<String> lines = "Line1\nLine2\nLine3".lines(); // Stream of lines
+
+// Files read/write methods
+String content = Files.readString(Paths.get("input.txt"));
+Files.writeString(Paths.get("output.txt"), "Hello Java 11!");
+
+// TLS 1.3 happens automatically with Java 11+
+// No code changes required - security improvement
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "Why was Java 11 important as an LTS?"
+**Your Response:** "Java 11 was crucial as the first long-term support after Java 8. The HTTP Client became standard, replacing the old HttpURLConnection. New String methods like isBlank() and strip() fixed common pain points. Files read/write methods simplified file I/O. Removing Java EE modules aligned with cloud-native trends, and TLS 1.3 support enhanced security."
+
 ---
 
 ## 🔹 1️⃣3️⃣ Java 12 (2019)
 
 * Switch expressions (Preview)
 * JVM improvements
+
+**Code Example:**
+```java
+// Switch Expressions (Preview)
+String day = "MONDAY";
+int workLoad = switch (day) {
+    case "MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY" -> 8;
+    case "SATURDAY", "SUNDAY" -> 0;
+    default -> throw new IllegalArgumentException("Invalid day: " + day);
+};
+
+// Traditional vs Switch Expression
+// Before:
+int traditional;
+switch (day) {
+    case "MONDAY":
+        traditional = 8;
+        break;
+    // ... more cases
+}
+
+// After:
+int modern = switch (day) {
+    case "MONDAY" -> 8;
+    // ... more cases
+};
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 12 introduce?"
+**Your Response:** "Java 12 continued the preview feature approach with Switch expressions - allowing switch statements to return values and eliminating break statements. This made code more concise and less error-prone. JVM improvements included better garbage collection algorithms and performance optimizations, keeping Java competitive with modern languages."
 
 ---
 
@@ -150,6 +547,46 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Text Blocks (Preview)
 * Switch improvements
 
+**Code Example:**
+```java
+// Text Blocks (Preview)
+String json = """
+    {
+        "name": "John Doe",
+        "age": 30,
+        "city": "New York"
+    }
+    """;
+
+String html = """
+    <html>
+        <body>
+            <h1>Hello, World!</h1>
+        </body>
+    </html>
+    """;
+
+// Before Text Blocks:
+String oldJson = "{\n" +
+    "  \"name\": \"John Doe\",\n" +
+    "  \"age\": 30\n" +
+    "}";
+
+// Switch improvements continued
+int result = switch (day) {
+    case "MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY" -> {
+        System.out.println("Weekday");
+        yield 8; // yield keyword for returning values
+    }
+    case "SATURDAY", "SUNDAY" -> 0;
+    default -> throw new IllegalArgumentException("Invalid day");
+};
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What came in Java 13?"
+**Your Response:** "Java 13 focused on developer experience with Text Blocks in preview - solving the multi-line string problem that required ugly concatenation or escape sequences. Switch improvements continued the evolution toward more expressive and safer switch statements. These features showed Java's commitment to modernizing syntax while maintaining backward compatibility."
+
 ---
 
 ## 🔹 1️⃣5️⃣ Java 14 (2020)
@@ -157,6 +594,45 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Records (Preview)
 * Pattern matching (instanceof preview)
 * Helpful NullPointerExceptions
+
+**Code Example:**
+```java
+// Records (Preview)
+public record Person(String name, int age, String email) {
+    // Automatically generates:
+    // - Constructor
+    // - equals(), hashCode(), toString()
+    // - Getters: name(), age(), email()
+    // - All fields are final (immutable)
+}
+
+Person person = new Person("Alice", 30, "alice@example.com");
+System.out.println(person.name()); // Alice
+System.out.println(person); // Person[name=Alice, age=30, email=alice@example.com]
+
+// Pattern matching for instanceof (Preview)
+Object obj = "Hello World";
+
+// Before Java 14:
+if (obj instanceof String) {
+    String str = (String) obj;
+    System.out.println(str.length());
+}
+
+// With pattern matching:
+if (obj instanceof String str) {
+    System.out.println(str.length()); // str is already cast!
+}
+
+// Helpful NullPointerExceptions (JVM feature)
+// Better error messages show exactly which part is null:
+// Before: NullPointerException
+// After: Cannot invoke "String.length()" because "user.getName()" is null
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What was exciting about Java 14?"
+**Your Response:** "Java 14 introduced Records in preview - a game-changer for data classes, eliminating boilerplate code for constructors, equals, hashCode, and toString. Pattern matching for instanceof preview made type checking and casting more elegant. Helpful NullPointerExceptions provided detailed error messages showing exactly which variable was null, making debugging much easier!"
 
 ---
 
@@ -167,6 +643,63 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Hidden Classes
 * ZGC improvements
 
+**Code Example:**
+```java
+// Text Blocks (Standard)
+String sql = """
+    SELECT u.name, u.email
+    FROM users u
+    WHERE u.status = 'ACTIVE'
+      AND u.created_at > ?
+    ORDER BY u.name
+    """;
+
+// Sealed Classes (Preview)
+public sealed class Shape 
+    permits Circle, Square, Triangle {
+    
+    public abstract double area();
+}
+
+public final class Circle extends Shape {
+    private final double radius;
+    
+    public Circle(double radius) {
+        this.radius = radius;
+    }
+    
+    @Override
+    public double area() {
+        return Math.PI * radius * radius;
+    }
+}
+
+public final class Square extends Shape {
+    private final double side;
+    
+    public Square(double side) {
+        this.side = side;
+    }
+    
+    @Override
+    public double area() {
+        return side * side;
+    }
+}
+
+// Non-sealed class (can be extended by anyone)
+public non-sealed class Triangle extends Shape {
+    // implementation
+}
+
+// ZGC improvements happen at JVM level
+// No code changes required - garbage collection optimization
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 15 bring?"
+**Your Response:** "Java 15 made Text Blocks standard, officially supporting clean multi-line strings. Sealed Classes in preview gave developers control over inheritance hierarchies - great for domain modeling. Hidden Classes allowed frameworks to generate classes at runtime more efficiently. ZGC improvements made low-latency garbage collection more robust for large-scale applications."
+
 ---
 
 ## 🔹 1️⃣7️⃣ Java 17 (2021) – LTS
@@ -176,6 +709,57 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Strong encapsulation of JDK internals
 * Foreign Function & Memory API (Incubator)
 
+**Code Example:**
+```java
+// Sealed Classes (Standard)
+public sealed class Vehicle 
+    permits Car, Motorcycle, Truck {
+    
+    public abstract int getWheelCount();
+}
+
+public final class Car extends Vehicle {
+    @Override
+    public int getWheelCount() {
+        return 4;
+    }
+}
+
+public final class Motorcycle extends Vehicle {
+    @Override
+    public int getWheelCount() {
+        return 2;
+    }
+}
+
+// Pattern Matching for instanceof (Standard)
+public void process(Object obj) {
+    if (obj instanceof String str && str.length() > 5) {
+        System.out.println("Long string: " + str);
+    } else if (obj instanceof List<?> list && !list.isEmpty()) {
+        System.out.println("List with " + list.size() + " items");
+    }
+}
+
+// Strong encapsulation of JDK internals
+// --illegal-access=deny is now default
+// Cannot access internal JDK packages without explicit flags
+
+// Foreign Function & Memory API (Incubator)
+import jdk.incubator.foreign.*;
+
+// Example: Access C library function (simplified)
+SymbolLookup libLookup = SymbolLookup.loaderLookup();
+MethodHandle strlen = libLookup.lookup("strlen").get();
+MemorySegment strSegment = MemorySegment.allocateUtf8String("Hello");
+long length = (long) strlen.invokeExact(strSegment);
+System.out.println("Length: " + length); // 5
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "Why was Java 17 significant as an LTS?"
+**Your Response:** "Java 17 was a landmark LTS release! Sealed Classes became standard, giving developers fine-grained control over inheritance. Pattern matching for instanceof made type operations more elegant. Strong encapsulation of JDK internals improved security. The Foreign Function & Memory API (incubator) began bridging Java with native code more efficiently, opening new possibilities for performance-critical applications."
+
 ---
 
 ## 🔹 1️⃣8️⃣ Java 18 (2022)
@@ -183,6 +767,50 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Simple Web Server
 * UTF-8 by default
 * Javadoc improvements
+
+**Code Example:**
+```java
+// Simple Web Server (for development)
+import com.sun.net.httpserver.*;
+
+public class SimpleServer {
+    public static void main(String[] args) throws IOException {
+        HttpServer server = HttpServer.create(new InetSocketAddress(8000), 0);
+        server.createContext("/", exchange -> {
+            String response = "Hello from Java 18 Simple Server!";
+            exchange.sendResponseHeaders(200, response.getBytes().length);
+            try (OutputStream os = exchange.getResponseBody()) {
+                os.write(response.getBytes());
+            }
+        });
+        server.start();
+        System.out.println("Server running on port 8000");
+    }
+}
+
+// UTF-8 by default
+// Before Java 18: System.getProperty("file.encoding") might return different values
+// After Java 18: UTF-8 is the default charset everywhere
+
+String defaultCharset = Charset.defaultCharset().name(); // "UTF-8"
+byte[] bytes = "Hello".getBytes(); // Uses UTF-8 by default
+
+// Javadoc improvements
+/**
+ * {@snippet :
+ * // Example usage
+ * MyClass obj = new MyClass();
+ * obj.doSomething();
+ * }
+ */
+public class MyClass {
+    // ...
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 18 introduce?"
+**Your Response:** "Java 18 focused on developer convenience with the Simple Web Server - a lightweight server for development and testing. UTF-8 became the default charset, fixing encoding issues across platforms. Javadoc improvements included search functionality and better documentation generation, making API documentation more accessible and useful."
 
 ---
 
@@ -192,6 +820,60 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Structured Concurrency (Incubator)
 * Record Patterns (Preview)
 
+**Code Example:**
+```java
+// Virtual Threads (Preview - Project Loom)
+import java.util.concurrent.*;
+
+// Traditional thread creation
+Thread traditionalThread = new Thread(() -> {
+    System.out.println("Traditional thread: " + Thread.currentThread().getName());
+});
+traditionalThread.start();
+
+// Virtual thread creation
+Thread virtualThread = Thread.ofVirtual().start(() -> {
+    System.out.println("Virtual thread: " + Thread.currentThread().getName());
+});
+
+// ExecutorService with virtual threads
+try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+    // Can create millions of virtual threads!
+    List<Future<?>> futures = new ArrayList<>();
+    for (int i = 0; i < 1_000_000; i++) {
+        futures.add(executor.submit(() -> {
+            Thread.sleep(Duration.ofMillis(100));
+            return "Task " + Thread.currentThread().threadId();
+        }));
+    }
+}
+
+// Structured Concurrency (Incubator)
+import jdk.incubator.concurrent.StructuredTaskScope;
+
+Future<String> userFuture = StructuredTaskScope.fork(() -> fetchUser());
+Future<Integer> orderFuture = StructuredTaskScope.fork(() -> fetchOrderCount());
+
+StructuredTaskScope.join(); // Wait for all tasks
+
+String user = userFuture.resultNow();
+int orderCount = orderFuture.resultNow();
+
+// Record Patterns (Preview)
+record Point(int x, int y) {}
+record Circle(Point center, int radius) {}
+
+void processShape(Object shape) {
+    if (shape instanceof Circle(Point(int x, int y), int radius)) {
+        System.out.printf("Circle at (%d, %d) with radius %d%n", x, y, radius);
+    }
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What was exciting about Java 19?"
+**Your Response:** "Java 19 was groundbreaking with Virtual Threads in preview - Project Loom's solution to high-concurrency programming, allowing millions of lightweight threads! Structured Concurrency (incubator) promised to simplify concurrent programming. Record Patterns (preview) extended pattern matching to work seamlessly with records, making data deconstruction more elegant and type-safe."
+
 ---
 
 ## 🔹 2️⃣0️⃣ Java 20 (2023)
@@ -199,6 +881,50 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Scoped Values (Incubator)
 * Pattern Matching enhancements
 * Virtual Threads update
+
+**Code Example:**
+```java
+// Scoped Values (Incubator)
+import jdk.incubator.concurrent.ScopedValue;
+
+public final static ScopedValue<String> USER = ScopedValue.newInstance();
+
+// Set scoped value for a thread
+ScopedValue.where(USER, "admin")
+    .run(() -> {
+        // In this scope, USER.get() returns "admin"
+        processRequest();
+    });
+
+// Pattern Matching enhancements
+void process(Object obj) {
+    switch (obj) {
+        case String s when s.length() > 10 -> 
+            System.out.println("Long string: " + s);
+        case String s -> 
+            System.out.println("Short string: " + s);
+        case Integer i when i > 100 -> 
+            System.out.println("Large number: " + i);
+        case Integer i -> 
+            System.out.println("Small number: " + i);
+        default -> 
+            System.out.println("Unknown type");
+    }
+}
+
+// Virtual Threads updates
+// Improved monitoring, debugging, and performance
+Thread.Builder builder = Thread.ofVirtual().name("worker-");
+for (int i = 0; i < 100; i++) {
+    builder.start(() -> {
+        System.out.println("Working in " + Thread.currentThread().getName());
+    });
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 20 bring?"
+**Your Response:** "Java 20 continued the concurrency revolution with Scoped Values (incubator) - a modern alternative to ThreadLocal for immutable data sharing. Pattern matching enhancements made type operations even more powerful. Virtual Threads updates refined the implementation based on community feedback, moving closer to production-ready high-concurrency programming in Java."
 
 ---
 
@@ -210,6 +936,80 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Sequenced Collections
 * String Templates (Preview)
 * Structured Concurrency (Preview)
+
+**Code Example:**
+```java
+// Virtual Threads (Standard)
+import java.util.concurrent.*;
+
+// Create virtual thread directly
+Thread virtualThread = Thread.startVirtualThread(() -> {
+    System.out.println("Hello from virtual thread!");
+});
+
+// Virtual thread executor
+try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+    Future<String> future = executor.submit(() -> {
+        Thread.sleep(Duration.ofSeconds(1));
+        return "Task completed";
+    });
+    
+    String result = future.get(); // Blocks with minimal overhead
+    System.out.println(result);
+}
+
+// Pattern Matching for switch
+sealed interface Shape permits Circle, Rectangle {}
+final record Circle(double radius) implements Shape {}
+final record Rectangle(double width, double height) implements Shape {}
+
+double calculateArea(Shape shape) {
+    return switch (shape) {
+        case Circle(double radius) -> Math.PI * radius * radius;
+        case Rectangle(double w, double h) -> w * h;
+    };
+}
+
+// Record Patterns (Standard)
+record Point(int x, int y) {}
+record Circle(Point center, double radius) {}
+
+void process(Object shape) {
+    if (shape instanceof Circle(Point(int x, int y), double r)) {
+        System.out.printf("Circle at (%d,%d) radius %.1f%n", x, y, r);
+    }
+}
+
+// Sequenced Collections
+List<String> list = new ArrayList<>(List.of("A", "B", "C"));
+SequencedCollection<String> sequenced = list;
+
+String first = sequenced.getFirst(); // "A"
+String last = sequenced.getLast();   // "C"
+
+// String Templates (Preview)
+String name = "Alice";
+int age = 30;
+String template = STR."Hello \{name}, you are \{age} years old!";
+
+// Structured Concurrency (Preview)
+import jdk.incubator.concurrent.StructuredTaskScope;
+
+try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
+    Future<String> user = scope.fork(() -> fetchUser());
+    Future<Integer> orders = scope.fork(() -> fetchOrderCount());
+    
+    scope.join();           // Wait for all
+    scope.throwIfFailed();   // Propagate exceptions
+    
+    String result = STR."User \{user.resultNow()} has \{orders.resultNow()} orders";
+    System.out.println(result);
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "Why is Java 21 considered revolutionary?"
+**Your Response:** "Java 21 is arguably the most exciting Java release ever! Virtual Threads became standard, fundamentally changing how we write concurrent code - no more complex thread pools! Pattern matching for switch made control flow more elegant. Record Patterns standardized data deconstruction. Sequenced Collections gave us ordered access to collections. String Templates (preview) will revolutionize string building, and Structured Concurrency (preview) promises to make concurrent programming as simple as sequential!"
 
 ---
 
@@ -223,6 +1023,63 @@ Here is a **complete Java version timeline with major features** (from first rel
 * Unnamed variables & patterns
 * Statements before super()
 
+**Code Example:**
+```java
+// Foreign Function & Memory API (Standard)
+import jdk.incubator.foreign.*;
+
+// Access C library functions safely
+SymbolLookup stdlib = SymbolLookup.loaderLookup();
+MethodHandle malloc = stdlib.lookup("malloc").get();
+MethodHandle free = stdlib.lookup("free").get();
+
+// Allocate native memory
+MemorySegment segment = (MemorySegment) malloc.invokeExact(1024);
+try {
+    // Use native memory
+    segment.setUtf8String(0, "Hello from native memory!");
+    String content = segment.getUtf8String(0);
+    System.out.println(content);
+} finally {
+    free.invokeExact(segment);
+}
+
+// Unnamed variables & patterns
+// Before:
+Map.Entry<String, Integer> entry = map.entrySet().iterator().next();
+String key = entry.getKey();
+int value = entry.getValue();
+
+// After with unnamed variable:
+var entry = map.entrySet().iterator().next();
+String key = entry.getKey();
+int value = entry.getValue(); // entry is unnamed
+
+// Pattern matching with unnamed:
+if (obj instanceof Point(_, int y)) {
+    System.out.println("Y coordinate: " + y); // X coordinate ignored
+}
+
+// Statements before super()
+public class Child extends Parent {
+    private final String processedName;
+    
+    public Child(String name) {
+        // Can now execute statements before calling super()
+        String normalized = name.trim().toUpperCase();
+        if (normalized.isEmpty()) {
+            normalized = "DEFAULT";
+        }
+        this.processedName = normalized;
+        super(); // Now allowed to be called after statements
+    }
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What did Java 22 introduce?"
+**Your Response:** "Java 22 made native interoperability first-class with the Foreign Function & Memory API becoming standard - allowing seamless Java-native code integration without JNI complexity. Unnamed variables & patterns reduced code noise in destructuring and lambda parameters. Statements before super() removed a long-standing restriction in constructors, making initialization more flexible."
+
 ---
 
 ## 🔹 2️⃣3️⃣ Java 23 (2024)
@@ -230,6 +1087,58 @@ Here is a **complete Java version timeline with major features** (from first rel
 * String Templates update
 * Primitive types in patterns (Preview)
 * Performance improvements
+
+**Code Example:**
+```java
+// String Templates update
+String name = "Alice";
+int score = 95;
+
+// STR template (simplified)
+String message = STR."Player \{name} scored \{score} points!";
+
+// FMT template (formatted)
+String formatted = FMT."Score: \{score}%d, Name: \{name}%s";
+
+// RAW template (no processing)
+String raw = RAW."Template \{name} literal";
+
+// Primitive types in patterns (Preview)
+void processNumber(Object obj) {
+    switch (obj) {
+        case int i when i > 100 -> 
+            System.out.println("Large int: " + i);
+        case int i -> 
+            System.out.println("Small int: " + i);
+        case double d when d > 1000.0 -> 
+            System.out.println("Large double: " + d);
+        case double d -> 
+            System.out.println("Small double: " + d);
+        default -> 
+            System.out.println("Not a number");
+    }
+}
+
+// Performance improvements happen at JVM level
+// Better garbage collection, JIT optimizations, etc.
+// No code changes required - automatic performance gains
+
+// Example of performance-aware code
+public class PerformanceExample {
+    // JVM automatically optimizes hot methods
+    public long computeSum(int[] array) {
+        long sum = 0;
+        for (int i = 0; i < array.length; i++) {
+            sum += array[i]; // Hot loop gets JIT compiled
+        }
+        return sum;
+    }
+}
+```
+
+### How to Explain in Interview (Spoken style format)
+**Interviewer:** "What's new in Java 23?"
+**Your Response:** "Java 23 continued modernizing Java with String Templates updates - bringing string interpolation closer to production. Primitive types in patterns (preview) extended pattern matching to work with primitives, eliminating wrapper conversions. Performance improvements across the board kept Java competitive, showing the platform's commitment to both developer productivity and runtime efficiency."
 
 ---
 
